fix: in some cases, container class was overlapping the tree

--- a/website/web/static/tree.css
+++ b/website/web/static/tree.css
@@ -14,6 +14,11 @@
   stroke-width: 2px;
 }
 
+.container {
+  width: 0px;
+  height: 0px;
+}
+
 #menu_container {
   position: fixed;
   top: 5px;
